Fix text input width issue - icon out of bounds

--- a/frontend/src/Components/Supplies/SearchTool/SearchTool.module.css
+++ b/frontend/src/Components/Supplies/SearchTool/SearchTool.module.css
@@ -29,6 +29,7 @@
     margin: 0 8px;
     padding: 0 4px;
     height: 24px;
+    width: 177px;
     align-self: center;
     background: transparent;
 }
